gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/fail2789.d
version https://git-lfs.github.com/spec/v1
oid sha256:05d5e22840750ab68b2144aaedeb176950dc4a1515bda74fa9c332df9763198a
size 2720
